# spooky_ros_packages

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/spooky_msgs/: CMakeLists.txt  package.xml
common/spooky_msgs/srv/: MotorCommand.srv
common/teleop/: CMakeLists.txt  package.xml
common/teleop/scripts/: keyboard_teleop.py
hardware/: CMakeLists.txt
hardware/camera/raspi_cam/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/camera/raspi_cam/include/raspi_cam/: raspi_cam_nodelet.h
hardware/camera/raspi_cam/launch/: raspi_cam_nodelet.launch
hardware/camera/raspi_cam/src/: raspi_cam_nodelet.cpp
hardware/motor_actuator/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
hardware/motor_actuator/include/motor_actuator/: adafruitdcmotor.h  adafruitmotorhat.h  motor_actuator_nodelet.h  motor_driver.h  util.h
hardware/motor_actuator/launch/: motor_actuator_nodelet.launch
hardware/motor_actuator/nodes/: encoder_node.py
hardware/motor_actuator/src/: adafruitdcmotor.cpp  adafruitmotorhat.cpp  i2cdevice.cpp  main.cpp  motor_actuator_nodelet.cpp  motor_driver.cpp  pi_encoders.py  pwm.cpp
hardware/motor_actuator/src/motor_actuator/: pi_encoder.py  rotary_encoder.py  rotary_encoder_v2.py
navigation/path_planning/: CMakeLists.txt  package.xml
navigation/path_planning/config/: costmap_common_params.yaml
navigation/path_planning/include/path_planning/: spooky_planner.h
navigation/path_planning/launch/: move_base.launch
spooky/: CMakeLists.txt  package.xml  spooky_4wheel.urdf
spooky/config/: spooky_navigation.rviz  spooky_test.rviz
spooky/launch/: generate_map_data.launch  spooky.launch
spooky/urdf/: spooky_4wheel.urdf
